# vmodsynth

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  configure.scan
autom4te.cache/: output.1  requests  traces.0  traces.1
demo/: basic_dog.xml  gain_offset_demo.xml  machine.xml  midi_in.xml  random.xml  random_poly.xml  traffic_horn.xml
doc/: vmodsynth_doc.lyx
src/: AlsaDriver.cpp  AlsaDriver.h  CMakeLists.txt  Cabinet.cpp  Cabinet.h  ControllerWindow.cpp  ControllerWindow.h  Driver.h  Engine.cpp  Engine.h  FindXml++.cmake  Inlet.cpp  Inlet.h  Knob.cpp  Knob.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  Module.cpp  Module.h  ModuleList.cpp  ModuleList.h  Outlet.cpp  Outlet.h  Selector.cpp  Selector.h  Switch.cpp  Switch.h  Wire.cpp  Wire.h  configure.ac  configure.scan  crazy_ring_signal.xml  default_patch.xml  default_patch.xml_backup  default_patch_multi.xml  default_patch_simple.xml  main.cpp  patch_1.xml  (+5 more)
src/modules/: algorithms.cpp  algorithms.h  v100.cpp  v100.h  v1001.cpp  v1001.h  v1005.cpp  v1005.h  v101.cpp  v101.h  v200.cpp  v200.h  v201.cpp  v201.h  v203.cpp  v203.h  v210.cpp  v210.h  v211.cpp  v211.h  v212.cpp  v212.h  v213.cpp  v213.h  v230.cpp  v230.h  v300.cpp  v300.h  v400.cpp  v400.h  v701.cpp  v701.h  v702.cpp  v702.h  v703.cpp  v703.h
